Pequenas modificações na estilização da página original

--- a/Minha Página/index.html
+++ b/Minha Página/index.html
@@ -9,6 +9,7 @@
 
     <!-- Estilização da Página -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/icone.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -26,11 +27,9 @@
     </nav>
 
     <header>
-        <h3> Minha Página </h3>
 
-        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
-            Assumenda ex dolorem dignissimos atque ad? Consectetur. </p>
+        <img src="img/bem-vindo.jpg" width="100%">
+
     </header>
 
     <!-- Seções dos Conteúdos -->
@@ -47,14 +46,17 @@
             Assumenda ex dolorem dignissimos atque ad? Consectetur.
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
+            Assumenda ex dolorem dignissimos atque ad? Consectetur.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
             Assumenda ex dolorem dignissimos atque ad? Consectetur.</p>
 
-        <div>
+        <div class="boxImg">
             <img src="img/site.jpg" width="300px">
-        </div>
 
-        <div>
             <img src="img/app.jpg" width="300px">
+
+            <img src="img/conexao.jpg" width="300px" height="200px">
         </div>
 
     </section>
@@ -63,14 +65,17 @@
         <h2> CLIENTES </h2>
         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
+            Assumenda ex dolorem dignissimos atque ad? Consectetur.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
             Assumenda ex dolorem dignissimos atque ad? Consectetur. </p>
 
-        <div>
+        <div class="boxImg">
             <img src="img/cliente1.jpg" width="300px">
-        </div>
 
-        <div>
             <img src="img/cliente2.jpg" width="300px">
+
+            <img src="img/cliente3.jpg" width="300px" height="200px">
         </div>
     </section>
 
@@ -79,14 +84,19 @@
 
         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
-            Assumenda ex dolorem dignissimos atque ad? Consectetur. </p>
+            Assumenda ex dolorem dignissimos atque ad? Consectetur.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
+            Assumenda ex dolorem dignissimos atque ad? Consectetur.</p>
 
-        <div>
-            <img src="img/academiapme.jpg" width="150px">
-        </div>
+        <div class="boxParceiro">
+            <img src="img/academiapme.jpg" width="200px" height="100px">
 
-        <div>
-            <img src="img/digital_innovation_one.jpg" width="150px">
+            <img src="img/digital_innovation_one.jpg" width="200px" height="100px">
+
+            <img src="img/empregoTech.png" width="200px" height="100px">
+
+            <img src="img/prefeituraCuitiba.jpg" width="200px" height="100px">
         </div>
     </section>
 
@@ -95,14 +105,17 @@
 
         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
+            Assumenda ex dolorem dignissimos atque ad? Consectetur.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Ex fuga iusto officiis ab vero odit ipsum, totam nostrum ipsam, aut, ut qui dolores.
             Assumenda ex dolorem dignissimos atque ad? Consectetur. </p>
 
-        <div>
+        <div class="boxImg">
             <img src="img/time.jpg" width="300px">
-        </div>
 
-        <div>
             <img src="img/time2.jpg" width="300px">
+
+            <img src="img/time3.jpg" width="300px" height="200px">
         </div>
     </section>
 
@@ -112,18 +125,20 @@
         <p>
             Entre em contato com nossa equipe
         </p>
+        
+        <br>
+        <div class="boxContato">
+            <a href="mailto:contato@empresa.com">
+                <img src="img/e-mail.jpg" class="logoContato" title="contato@empresa.com">
+            </a>
 
-        <div>
-            <img src="img/email.jpg" class="logo">
-            <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+            <a href="tel:9999999999">
+                <img src="img/tel.jpg" class="logoContato" title="(99) 9999-9999">
+            </a>
         </div>
+        <br>
 
-        <div>
-            <img src="img/fone.jpg" class="logo">
-            <p><a href="tel:9999999999">(99) 9999-9999</a></p>
-        </div>
     </section>
-
     <footer>
         <p> Desenvolvido por TamLuzs</p>
     </footer>
